namespace NotificationApp.Models;

/// <summary>
/// Specifies the available notification channel types.
/// </summary>
public enum NotificationType
{
    Email,
    Sms,
    Push
}